like button position

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <tr> <td class="briefsm"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.</p><h4><br />share</h4></td></tr>
 
   <tr>
-    <td class="brief"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.</p><span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt1" data-icon_l_c_v="#fb0505" data-icon_d_c_v="#fb0505" data-white_label="true" data-identifier="item_1" data-show_like_label="false" data-dislike_enabled="false" data-icon_dislike_show="false" data-voting_cancelable="false" data-counter_clickable="true" data-counter_zero_show="true" data-popup_disabled="true" data-popup_position="bottom"><br /></span></td>
+    <td class="brief"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.<br /></p><span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt1" data-icon_l_c_v="#fb0505" data-icon_d_c_v="#fb0505" data-white_label="true" data-identifier="item_1" data-show_like_label="false" data-dislike_enabled="false" data-icon_dislike_show="false" data-voting_cancelable="false" data-counter_clickable="true" data-counter_zero_show="true" data-popup_disabled="true" data-popup_position="bottom"></span></td>
 
     <td><img class="thumbnail" src="assets/icons/webtag.svg" /></td>
 
