--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="content">
 
 <table class="item">
-  <tr> <td class="briefsm"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.</p><h4><br />share</h4></td></tr>
+  <tr> <td class="briefsm"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.</p><span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt1" data-icon_l_c_v="#fb0505" data-icon_d_c_v="#fb0505" data-bg_c="#ffffff" data-brdr_c="rgba(255,255,255,0)" data-white_label="true" data-identifier="item_1" data-show_like_label="false" data-dislike_enabled="false" data-icon_dislike_show="false" data-voting_cancelable="false" data-counter_clickable="true" data-counter_zero_show="true" data-popup_disabled="true" data-popup_position="bottom"></span></td></tr>
 
   <tr>
     <td class="brief"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.</p><span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt1" data-icon_l_c_v="#fb0505" data-icon_d_c_v="#fb0505" data-bg_c="#ffffff" data-brdr_c="rgba(255,255,255,0)" data-white_label="true" data-identifier="item_1" data-show_like_label="false" data-dislike_enabled="false" data-icon_dislike_show="false" data-voting_cancelable="false" data-counter_clickable="true" data-counter_zero_show="true" data-popup_disabled="true" data-popup_position="bottom"></span></td>
