--- a/index.html
+++ b/index.html
@@ -14,30 +14,67 @@
   </head>
   <body>
 
-   
- 
-    <div id="nav">
-      <div class="title">ZHIYU XUE</div>
-      <div class="manu about"><a href="http://reaji.me/resume">ABOUT</a></div>
-      <div class="manu works">WORKS</div>
-  </div>
 
+<div id="nav">
+      <div class="title">ZHIYU XUE</div>
+      <a href="http://resume.zxue.me"><div class="manu about">ABOUT</div></a>
+      <a href="http://works.zxue.me"><div class="manu works">WORKS</div></a>
+  </div>
 
 
 <div id="content">
 
+
 <table class="item">
-  <tr> <td class="briefsm"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.</p><span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt1" data-icon_l_c_v="#fb0505" data-icon_d_c_v="#fb0505" data-bg_c="#ffffff" data-brdr_c="rgba(255,255,255,0)" data-white_label="true" data-identifier="item_1" data-show_like_label="false" data-dislike_enabled="false" data-icon_dislike_show="false" data-voting_cancelable="false" data-counter_clickable="true" data-counter_zero_show="true" data-popup_disabled="true" data-popup_position="bottom"></span></td></tr>
+  <tr> <td class="briefsm"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
 
   <tr>
-    <td class="brief"><h3>Project1</h3><h4>one sentence description</h4><p><br />Tell a little bit more about this project, and you will see how it goes, I promise. This one will be used as an tamplate for others.</p><span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt1" data-icon_l_c_v="#fb0505" data-icon_d_c_v="#fb0505" data-bg_c="#ffffff" data-brdr_c="rgba(255,255,255,0)" data-white_label="true" data-identifier="item_1" data-show_like_label="false" data-dislike_enabled="false" data-icon_dislike_show="false" data-voting_cancelable="false" data-counter_clickable="true" data-counter_zero_show="true" data-popup_disabled="true" data-popup_position="bottom"></span></td>
+    <td class="brief"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
 
-    <td><img class="thumbnail" src="assets/icons/webtag.svg" /></td>
+    <td><img class="thumbnail" src="assets/img/homepage.png" /></td>
 
-    <td class="detail"><h4>Date:</h4> <p><br />Media:</p> <p>Sort:</p> <p>Resource:</p> <p>Credit:</p> <p>Instructor:</p> <h4><br />Resume</h4> <h4>Contact Me</h4></td>
+    <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Date:</h4> <p><br />Media:</p> <p>Sort:</p> <p>Resource:</p> <p>Credit:</p> <p>Instructor:</p> <h4><br />Resume</h4> <h4>Contact Me</h4></td></tr>
+<tr><td class="detailsm"><h4>Dec, 2015</h4> <p class="detailp"><br />Media:Web</p> <p class="detailp">Sort:Personal Portfolio</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+</table>
+
+<div class="cutline"></div>
+
+<table class="item">
+  <tr> <td class="briefsm"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
+
+  <tr>
+    <td class="brief"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
+
+    <td><img class="thumbnail" src="assets/img/homepage.png" /></td>
+
+    <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+</tr>
+
+<tr><td class="detailsm"><h4>Dec, 2015</h4> <p class="detailp"><br />Media:Web</p> <p class="detailp">Sort:Personal Portfolio</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+</table>
+
+<div class="cutline"></div>
+
+<table class="item">
+  <tr> <td class="briefsm"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
+
+  <tr>
+    <td class="brief"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
+
+    <td><img class="thumbnail" src="assets/img/homepage.png" /></td>
+
+    <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+</tr>
+
+<tr><td class="detailsm"><h4>Dec, 2015</h4> <p class="detailp"><br />Media:Web</p> <p class="detailp">Sort:Personal Portfolio</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table>
 
 
@@ -46,12 +83,11 @@
 
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://reaji.me/resume"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU(REAJI) XUE</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU(REAJI) XUE</span></a></div>
 
-  <div class="mysharebuttom1">f</div> <div class="mysharebuttom2">t</div> <div class="mysharebuttom3">in</div> 
+  <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
 </div>
 
 
-<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
 </body>
 </html>
