--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <div id="nav">
-      <div class="title">ZHIYU XUE</div>
+      <a href="http://zxue.me"><div class="title">ZHIYU XUE</div></a>
       <a href="http://resume.zxue.me"><div class="manu about">ABOUT</div></a>
       <a href="http://works.zxue.me"><div class="manu works">WORKS</div></a>
   </div>
@@ -26,16 +26,16 @@
 
 
 <table class="item">
-  <tr> <td class="briefsm"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+  <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
 </p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
 
   <tr>
-    <td class="brief"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+    <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
 </p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
 
-    <td><img class="thumbnail" src="assets/img/homepage.png" /></td>
+    <td><img class="thumbnail" src="assets/img/mixx.png" /></td>
 
-    <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+    <td class="detail"><h4>Fall, 2015</h4> <p><br />Touch Point:Mobile, Air Plane</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
 <tr><td class="detailsm"><h4>Dec, 2015</h4> <p class="detailp"><br />Media:Web</p> <p class="detailp">Sort:Personal Portfolio</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
@@ -48,10 +48,10 @@
 </p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
 
   <tr>
-    <td class="brief"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+    <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
 </p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
 
-    <td><img class="thumbnail" src="assets/img/homepage.png" /></td>
+    <td><img class="thumbnail" src="assets/img/companionship.png" /></td>
 
     <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
