--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
 
 
 <table class="item">
-  <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
+  <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looking for branding elements and use them to develop a new product with new functions.
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
   <tr>
-    <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
+    <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looking for branding elements and use them to develop a new product with new functions.
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
-    <td><img class="thumbnail" src="assets/img/mixx.png" /></td>
+    <td><a href="mixx/index.html"><img class="thumbnail" src="assets/img/mixx2.png" /></td>
 
-    <td class="detail"><h4>Fall, 2015</h4> <p><br />Touch Point:Mobile, Air Plane</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+    <td class="detail"><h4>Fall, 2015</h4> <p><br />Touch Point:Mobile, Air Plane</p> <p>Instructor: Aynne Valencia</p> <p>Class:Visual Interaction</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Dec, 2015</h4> <p class="detailp"><br />Media:Web</p> <p class="detailp">Sort:Personal Portfolio</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Fall, 2015</h4> <p class="detailp"><br />Touch Point:Mobile, Air Plane</p>  <p class="detailp">Instructor: Aynne Valencia</p> <p class="detailp">Class:Visual Interaction Design</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
 </table>
 
 <div class="cutline"></div>
 
 <table class="item">
-  <tr> <td class="briefsm"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
+  <tr> <td class="briefsm"><h3>Companionship</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td></tr>
 
   <tr>
     <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
     <td><img class="thumbnail" src="assets/img/companionship.png" /></td>
 
@@ -63,11 +63,11 @@
 
 <table class="item">
   <tr> <td class="briefsm"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td></tr>
 
   <tr>
     <td class="brief"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td>
 
     <td><img class="thumbnail" src="assets/img/homepage.png" /></td>
 
