--- a/companionship/index.html
+++ b/companionship/index.html
@@ -35,11 +35,35 @@
   <h6 class="procredit">Project Advisor: <a href="http://eleganthack.com" style="font-weight:500; text-decoration:underline">Christina Wodtke</a></h6>
 
   <img class="showcase"src="assets/img/img1.png" />
+  <p class="imgnote">img of rendered finalized design</p>
 
-  <h1 class="protitle1">Story Arc</h1>
-  <h4 class="prosubtitle">A nice narrative tool for user/reader enagement.</a></h4>
+  <h2 class="protitle1">Why companionship?</h2>
+  <h6 class="prodescribe1">This project required designers make people be willing to share a scarce resource. I took companionship as my topic because I was in a kind of sorrow and I want to help myself get rid of it. I interviewed 3 friends from different age and different culture background. I asked them to tell me a story of being helpless and upset and took sketch note. Interestingly, I found a pattern that all of them got rid of sorrow by talking to people. Both sharing their stories and listening to other stories help them move on. Therefore, I settled down with companionship.</h6>
+   <img class="showcase"src="assets/img/process.png" />
+   <p class="imgnote">Interview Sketch Note</p>
+   <h3 class="quotation">"I want to be able to be myself, to open my heart. I want to be emotional avaliable to what to love and feel."<br/>-Jose(Interviewee)</h3>
+   <h3 class="quotation">“City life is millions of people being lonesome together.”
+<br/>-Thoreau(Philosopher)</h3>
+  <h3 class="keypoint"><span>Insights:</span><br/>
+ People tend to talk to others to get rid of sorrow and lonliness.</h3>
 
-    <img class="showcase"src="assets/img/storyarc.svg" />
+
+ <h2 class="protitle1">How to share companionship?</h2>
+   <h6 class="prodescribe1">I came up with ideas that we can focus on creating characters that in different spots. Provide players with discover by letting users walk around and talk to different characters.</h6>
+
+   <img class="showcase"src="assets/img/ideation.png" />
+  <h3 class="keypoint"><span>Prototype:</span><br/>
+  By making a rough model to play round to see it if works.</h3>
+
+
+  <h2 class="protitle1">What is the senario?</h2>
+
+  <img class="showcase"src="assets/img/storyarc.svg" />
+
+  <h3 class="keypoint"><span>Story Arc:</span><br/>
+  Plan out the senario and figure out what I can do to create an engaging story.</h3>
+
+  <img class="showcase"src="assets/img/img2.png" />
 
 </div>
 
