--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <div id="nav">
       <a href="http://zxue.me"><div class="title">ZHIYU XUE</div></a>
-      <a href="http://resume.zxue.me"><div class="manu about">ABOUT</div></a>
-      <a href="http://works.zxue.me"><div class="manu works">WORKS</div></a>
+      <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
+      <div class="manu works"><a href="http://works.zxue.me">WORKS</a></div>
   </div>
 
 
@@ -32,7 +32,7 @@
     <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
-    <td><img class="thumbnail" src="assets/img/companionship.png" /></td>
+    <a href="companionship/index.html"><td><img class="thumbnail" src="assets/img/companionship.png" /></td></a>
 
     <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
@@ -51,7 +51,7 @@
     <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looking for branding elements and use them to develop a new product with new functions.
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
-    <td><a href="mixx/index.html"><img class="thumbnail" src="assets/img/mixx2.png" /></td>
+    <td><a href="http://zxue.me/24-7mixx"><img class="thumbnail" src="assets/img/mixx2.png" /></td>
 
     <td class="detail"><h4>Fall, 2015</h4> <p><br />Touch Point:Mobile, Air Plane</p> <p>Instructor: Aynne Valencia</p> <p>Class:Visual Interaction</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
 </tr>
