--- a/index.html
+++ b/index.html
@@ -61,21 +61,7 @@
 
 <div class="cutline"></div>
 
-<table class="item">
-  <tr> <td class="briefsm"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td></tr>
-
-  <tr>
-    <td class="brief"><h3>Portfolio Website</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td>
-
-    <td><img class="thumbnail" src="assets/img/homepage.png" /></td>
-
-    <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
-</tr>
-
-<tr><td class="detailsm"><h4>Dec, 2015</h4> <p class="detailp"><br />Media:Web</p> <p class="detailp">Sort:Personal Portfolio</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
-</table>
+<h1 class="continue">To Be Continue...</h1>
 
 
 </div>
