--- a/companionship/index.html
+++ b/companionship/index.html
@@ -13,6 +13,14 @@
      <meta name="apple-mobile-web-app-capable" content="yes" />
 
 
+  <meta property="og:url"           content="http://works.zxue.me/companionship/index.html" />
+  <meta property="og:type"          content="Story Telling Project" />
+  <meta property="og:title"         content="Zhiyu Xue" />
+  <meta property="og:description"   content="“Companionship” is an interactive story project. The goal is engaging readers to accompany with people because companionship is a scarce resource in the modern time. By making it into Sifteo Cubes, players can put two cubes together to accomplish the “accompany.” People better engage with the story by having the action of putting together." />
+  <meta property="og:image"         content="assets/img/img1.png" />
+</head>
+
+
   </head>
   <body>
 
