--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   <table class="item">
   <tr> <td class="briefsm"><h3>Companionship</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td></tr>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//works.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//works.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//works.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td></tr>
 
   <tr>
     <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//works.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//works.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//works.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
  <td>   <a href="companionship/index.html"><img class="thumbnail" src="assets/img/companionship.png" /></a></td>
 
