--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <table class="item">
   <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looking for branding elements and use them to develop a new product with new functions.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
   <tr>
     <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looking for branding elements and use them to develop a new product with new functions.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
     <td><a href="http://zxue.me/24-7mixx"><img class="thumbnail" src="assets/img/mixx2.png" /></td>
 
