--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 <div id="content">
 
   <table class="item">
-  <tr> <td class="briefsm"><h3>Companionship</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p><br/>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+  <tr> <td class="briefsm"><h3>Companionship</h3><!-- <h6>Ixd Junior student at CCA</h6> --><p>“Companionship” is an interactive story project. The goal is engaging readers to accompany with people because companionship is a scarce resource in the modern time. 
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//works.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//works.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//works.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td></tr>
 
   <tr>
-    <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p>my portfolio is designed to present my college works for you as the one who looks for UX/UI internships.
+    <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p>“Companionship” is an interactive story project. The goal is engaging readers to accompany with people because companionship is a scarce resource in the modern time. 
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//works.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//works.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//works.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
  <td>   <a href="companionship/index.html"><img class="thumbnail" src="assets/img/companionship.png" /></a></td>
 
-    <td class="detail"><h4>Dec, 2015</h4> <p><br />Media:Web</p> <p>Sort:Personal Portfolio</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> -->  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+    <td class="detail"><h4>Feb, 2015</h4> <p><br />Media:Sifteo Cubes</p> <p>Sort:Interactive Story Book(Game)</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <p>Instructor:Christine Wodkte</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Dec, 2015</h4> <p class="detailp"><br />Media:Web</p> <p class="detailp">Sort:Personal Portfolio</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br />Media:Sifteo Cubes</p> <p>Sort:Interactive Story Book(Game)</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <p>Instructor:Christine Wodkte</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table>
 
 
