--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <td class="detail"><h4>Feb, 2015</h4> <p><br />Media:Sifteo Cubes</p> <p>Sort:Interactive Story Book(Game)</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <p>Instructor:Christine Wodkte</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br />Media:Sifteo Cubes</p> <p>Sort:Interactive Story Book(Game)</p> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <p>Intent: Internship</p> <p>Major:Interaction Design</p> <!-- <p>Credit:</p> --> <p>Instructor:Christine Wodkte</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Feb, 2015</h4> <p class="detailp"><br />Media:Sifteo Cubes</p> <p class="detailp">Sort:Interactive Story Book(Game)</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p> <p class="detailp">Intent: Internship</p> <p class="detailp">Major:Interaction Design</p> <!-- <p>Credit:</p> --> <p class="detailp">Instructor:Christine Wodkte</p> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table>
 
 
