--- a/companionship/index.html
+++ b/companionship/index.html
@@ -39,14 +39,14 @@
 
   <img class="itis" src="assets/img/sifteo.png" />
 
-  <h6 class="prodescribe">“Companionship” is an interactive story project. The goal is engaging readers to accompany with people because companionship is a scarce resource in the modern time. By making it into Sifteo Cubes, players can put two cubes together to accomplish the “accompany.” People better engage with the story by having the action of putting together.</h6>
+  <h6 class="prodescribe">“Companionship” is an interactive story project. The assignment asked students to find a scarce resource and develop a story to encourage readers to share the resource; the resource chosen by me was Companionship. Witht he help of the Sifteo cubes, readers could engage in this Companionship with 5 Non-player characters - the action of combining cubes enabled players to better engage with the story.</h6>
   <h6 class="procredit">Project Advisor: <a href="http://eleganthack.com" style="font-weight:500; text-decoration:underline">Christina Wodtke</a></h6>
 
   <img class="showcase"src="assets/img/img1.png" />
   <p class="imgnote">img of rendered finalized design</p>
 
   <h2 class="protitle1">Why companionship?</h2>
-  <h6 class="prodescribe1">This project required designers make people be willing to share a scarce resource. I took companionship as my topic because I was in a kind of sorrow and I want to help myself get rid of it. I interviewed 3 friends from different age and different culture background. I asked them to tell me a story of being helpless and upset and took sketch note. Interestingly, I found a pattern that all of them got rid of sorrow by talking to people. Both sharing their stories and listening to other stories help them move on. Therefore, I settled down with companionship.</h6>
+  <h6 class="prodescribe1">I challenged the topic of companionship because I had found myself in a very low state of mind and I needed help to get out of it. So, I interviewed 3 friends from different age and cultural backgounds. I asked them to tell me a story of being helpless and upset and sketched notes. Interestingly, I found a pattern; that all of them got rid of their sorrow by talking to people. Both sharing their stories and listening to other stories to help them move on. I found myself greatly enjoying my topic choice.</h6>
    <img class="showcase"src="assets/img/process.png" />
    <p class="imgnote">Interview Sketch Note</p>
    <h3 class="quotation">"I want to be able to be myself, to open my heart. I want to be emotional avaliable to what to love and feel."<br/>-Jose(Interviewee)</h3>
@@ -57,11 +57,11 @@
 
 
  <h2 class="protitle1">How to share companionship?</h2>
-   <h6 class="prodescribe1">I came up with ideas that we can focus on creating characters that in different spots. Provide players with discover by letting users walk around and talk to different characters.</h6>
+   <h6 class="prodescribe1">We could focus on creating characters in different locations on a map. This provided players discovery by letting users walk around and talk to different characters.</h6>
 
    <img class="showcase"src="assets/img/ideation.png" />
   <h3 class="keypoint"><span>Prototype:</span><br/>
-  By making a rough model to play round to see it if works.</h3>
+   A rough model to play around with to see if the idea works.</h3>
 
 
   <h2 class="protitle1">What is the senario?</h2>
