--- a/companionship/index.html
+++ b/companionship/index.html
@@ -49,11 +49,11 @@
   <h6 class="prodescribe1">I challenged the topic of companionship because I had found myself in a very low state of mind and I needed help to get out of it. So, I interviewed 3 friends from different age and cultural backgounds. I asked them to tell me a story of being helpless and upset and sketched notes. Interestingly, I found a pattern; that all of them got rid of their sorrow by talking to people. Both sharing their stories and listening to other stories to help them move on. I found myself greatly enjoying my topic choice.</h6>
    <img class="showcase"src="assets/img/process.png" />
    <p class="imgnote">Interview Sketch Note</p>
-   <h3 class="quotation">"I want to be able to be myself, to open my heart. I want to be emotional avaliable to what to love and feel."<br/>-Jose(Interviewee)</h3>
-   <h3 class="quotation">“City life is millions of people being lonesome together.”
-<br/>-Thoreau(Philosopher)</h3>
+   <h4 class="quotation">"I want to be able to be myself, to open my heart. I want to be emotional avaliable to what to love and feel."<br/>-Jose(Interviewee)</h4>
+   <h4 class="quotation">“City life is millions of people being lonesome together.”
+<br/>-Thoreau(Philosopher)</h4>
   <h3 class="keypoint"><span>Insights:</span><br/>
- People tend to talk to others to get rid of sorrow and lonliness.</h3>
+ People tend to talk to others to get rid of sorrow and loneliness, because sharing makes them comfortable.</h3>
 
 
  <h2 class="protitle1">How to share companionship?</h2>
@@ -61,7 +61,7 @@
 
    <img class="showcase"src="assets/img/ideation.png" />
   <h3 class="keypoint"><span>Prototype:</span><br/>
-   A rough model to play around with to see if the idea works.</h3>
+   A rough model to play around with for testing the ideas.</h3>
 
 
   <h2 class="protitle1">What is the senario?</h2>
@@ -71,7 +71,24 @@
   <h3 class="keypoint"><span>Story Arc:</span><br/>
   Plan out the senario and figure out what I can do to create an engaging story.</h3>
 
-  <img class="showcase"src="assets/img/img2.png" />
+  <div class="smashowcase"><img class="showcase"src="assets/img/img2.png" /></div>
+
+ <h3 class="keypoint"><span>Character Design:</span><br/>
+I drew these characters in pixelate style with illustrator and give them personalities to fit in the story.</h3>
+  <div class="smshowcase"><img class="showcase"src="assets/img/blueprint.svg" /></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character1.gif" /><h3 class="characterds"><span>Re:</span><br/>
+  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
+ <!--  <div class="smshowcase"><img class="character" src="assets/img/character2.gif" /><h3 class="characterds"><span>Re:</span><br/>
+  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character3.gif" /><h3 class="characterds"><span>Re:</span><br/>
+  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character4.gif" /><h3 class="characterds"><span>Re:</span><br/>
+  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character5.gif" /><h3 class="characterds"><span>Re:</span><br/>
+  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character6.gif" /><h3 class="characterds"><span>Re:</span><br/>
+  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div> -->
+
 
 </div>
 
