update character design

--- a/companionship/index.html
+++ b/companionship/index.html
@@ -53,7 +53,7 @@
    <h4 class="quotation">“City life is millions of people being lonesome together.”
 <br/>-Thoreau(Philosopher)</h4>
   <h3 class="keypoint"><span>Insights:</span><br/>
- People tend to talk to others to get rid of sorrow and loneliness, because sharing makes them comfortable.</h3>
+ People tend to talk to others to get rid of sorrow and loneliness because sharing makes them comfortable.</h3>
 
 
  <h2 class="protitle1">How to share companionship?</h2>
@@ -76,18 +76,18 @@
  <h3 class="keypoint"><span>Character Design:</span><br/>
 I drew these characters in pixelate style with illustrator and give them personalities to fit in the story.</h3>
   <div class="smshowcase"><img class="showcase"src="assets/img/blueprint.svg" /></div>
-  <div class="smshowcase"><img class="character" src="assets/img/character1.gif" /><h3 class="characterds"><span>Re:</span><br/>
-  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
- <!--  <div class="smshowcase"><img class="character" src="assets/img/character2.gif" /><h3 class="characterds"><span>Re:</span><br/>
-  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
-  <div class="smshowcase"><img class="character" src="assets/img/character3.gif" /><h3 class="characterds"><span>Re:</span><br/>
-  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
-  <div class="smshowcase"><img class="character" src="assets/img/character4.gif" /><h3 class="characterds"><span>Re:</span><br/>
-  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
-  <div class="smshowcase"><img class="character" src="assets/img/character5.gif" /><h3 class="characterds"><span>Re:</span><br/>
-  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div>
-  <div class="smshowcase"><img class="character" src="assets/img/character6.gif" /><h3 class="characterds"><span>Re:</span><br/>
-  He is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h3></div> -->
+  <div class="smshowcase"><img class="character" src="assets/img/character1.gif" /><h4 class="characterds"><span>Re:</span><br/>
+  Re is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h4></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character2.gif" /><h4 class="characterds"><span>Priest:</span><br/>
+Priest had a relationship, but it did not work out. He advises Re to help people to find Re's comfort zone because that helpped him.</h4></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character3.gif" /><h4 class="characterds"><span>Smoker:</span><br/>
+ Like most smokers, he borrows a light, opens a topic, and talks to people. Smokers are everywhere in cities and they always talk to strangers like they are old friends. </h4></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character4.gif" /><h4 class="characterds"><span>Miss Mo:</span><br/>
+  Miss Mo was hurt by someone, but she does want to share. <br />(Talk to her twice will learn her story.)</h4></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character5.gif" /><h4 class="characterds"><span>Saaya:</span><br/>
+  Saaya lives in a haunted house, but the ghost is nice and keeps Saaya accompany. So she never feels alone.</h4></div>
+  <div class="smshowcase"><img class="character" src="assets/img/character6.gif" /><h4 class="characterds"><span>Mojica:</span><br/>
+ Re's exboyfriend. Re came to tell him that Re is no longer feel bad anymore. Re wants to thank him for leaving Re alone because Re already moves on.</h4></div>
 
 
 </div>
@@ -96,7 +96,7 @@ I drew these characters in pixelate style with illustrator and give them persona
 
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU(REAJI) XUE</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU (REAJI) XUE</span></a></div>
 
   <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
 </div>
