--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Zhiyu Xue</title>
+    <title>Work - Zhiyu Xue</title>
     <meta name="author" content="Zhiyu(Reaji) Xue" />
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
