--- a/companionship/index.html
+++ b/companionship/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Zhiyu (Reaji) Xue" />
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="shortcut icon" href="assets/icons/webtag.png">
+    <link rel="shortcut icon" href="../assets/icons/webtag.png">
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/icons/webtag.svg">
 
      <meta name="apple-mobile-web-app-capable" content="yes" />
