subtle nav change

--- a/companionship/index.html
+++ b/companionship/index.html
@@ -27,8 +27,8 @@
 
 <div id="nav">
       <a href="http://zxue.me"><div class="title">ZHIYU XUE</div></a>
-      <a href="http://resume.zxue.me"><div class="manu about">ABOUT</div></a>
-      <a href="../index.html"><div class="manu works">WORKS</div></a>
+      <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
+      <div class="manu works"><a href="http://works.zxue.me">WORK</a></div>
   </div>
 
 
