--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="nav">
       <a href="http://zxue.me"><div class="title">ZHIYU XUE</div></a>
       <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
-      <div class="manu works"><a href="http://works.zxue.me">WORKS</a></div>
+      <div class="manu works"><a href="http://works.zxue.me">WORK</a></div>
   </div>
 
 
@@ -61,7 +61,7 @@
 
 <div class="cutline"></div>
 
-<h1 class="continue">To Be Continue...</h1>
+<h1 class="continue">To Be Continued...</h1>
 
 
 </div>
