--- a/companionship/index.html
+++ b/companionship/index.html
@@ -31,29 +31,39 @@
       <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
   </div>
 
-
 <div id="content">
 
   <h1 class="protitle">Companionship</h1>
   <h4 class="prosubtitle">An interactive story-telling game on <a class="whatis">Sifteo Cubes.</a></h4>
-
-  <img class="itis" src="assets/img/sifteo.png" />
-
-  <h6 class="prodescribe">“Companionship” is an interactive story project. The assignment asked students to find a scarce resource and develop a story to encourage readers to share the resource; the resource chosen by me was Companionship. Witht he help of the Sifteo cubes, readers could engage in this Companionship with 5 Non-player characters - the action of combining cubes enabled players to better engage with the story.</h6>
   <h6 class="procredit">Project Advisor: <a href="http://eleganthack.com" style="font-weight:500; text-decoration:underline">Christina Wodtke</a></h6>
+
+  <img class="showcase"src="assets/img/pho2test.png" />
+
+<h3 id="elevatorpitch">For people who have suffered from a break up, Companionship is an interactive story-telling game that persuades people to open their heart and listen to other people's stories. Unlike ordinary story books, the game encourages players to move on.</h3>
+    <h4 class="quotation">“City life is millions of people being lonesome together.”
+<br/>-Thoreau (Philosopher)</h4>
+
+
+  <!-- <img class="itis" src="assets/img/sifteo.png" /> -->
+  <h3 class="readmore"><a>Read More</a></h3>
+
+
+<div id="readmore">
+  <h6 class="prodescribe">“Companionship” is an interactive story project. The assignment asked students to find a scarce resource and develop a story to encourage readers to share the resource; the resource chosen by me was Companionship. With the help of the Sifteo cubes, readers could engage in this Companionship with 5 Non-player characters - the action of combining cubes enabled players to better engage with the story.</h6>
+  
 
   <img class="showcase"src="assets/img/img1.png" />
   <p class="imgnote">img of rendered finalized design</p>
 
   <h2 class="protitle1">Why companionship?</h2>
-  <h6 class="prodescribe1">I challenged the topic of companionship because I had found myself in a very low state of mind and I needed help to get out of it. So, I interviewed 3 friends from different age and cultural backgounds. I asked them to tell me a story of being helpless and upset and sketched notes. Interestingly, I found a pattern; that all of them got rid of their sorrow by talking to people. Both sharing their stories and listening to other stories to help them move on. I found myself greatly enjoying my topic choice.</h6>
+  <h6 class="prodescribe1">I chose the topic of companionship because I had found feeling low and I needed help to get out of it. So, I interviewed 3 friends of different ages and cultural backgrounds. I asked them to tell me a story of being helpless and upset and sketched notes. Interestingly, I found a pattern; that all of them got rid of their sorrow by talking to others. Both sharing their stories and listening others' stories helped them move on. I found myself greatly enjoying my topic choice, because it also helped me out.</h6>
    <img class="showcase"src="assets/img/process.png" />
    <p class="imgnote">Interview Sketch Note</p>
-   <h4 class="quotation">"I want to be able to be myself, to open my heart. I want to be emotional avaliable to what to love and feel."<br/>-Jose(Interviewee)</h4>
-   <h4 class="quotation">“City life is millions of people being lonesome together.”
-<br/>-Thoreau(Philosopher)</h4>
+   <h4 class="quotation">"I want to be able to be myself, to open my heart. I want to be emotional avaliable to what to love and feel."<br/>-Jose (Interviewee)</h4>
+   <h4 class="quotation">“I encountered culture shock during travling in India. When I came back, I felt no one understood me. It got better after I talked with my friends and they understood.”
+<br/>-Joyna (Interviewee)</h4>
   <h3 class="keypoint"><span>Insights:</span><br/>
- People tend to talk to others to get rid of sorrow and loneliness because sharing makes them comfortable.</h3>
+ People tend to talk to others to get rid of sorrow and loneliness because sharing makes them understand others and feel like they are not alone.<br/><br/> However, some people do not share and listen to others. This is the story that try to help them find the way to get rid of their sorrow and loneliness.</h3>
 
 
  <h2 class="protitle1">How to share companionship?</h2>
@@ -74,7 +84,7 @@
   <div class="smashowcase"><img class="showcase"src="assets/img/img2.png" /></div>
 
  <h3 class="keypoint"><span>Character Design:</span><br/>
-I drew these characters in pixelate style with illustrator and give them personalities to fit in the story.</h3>
+I drew these characters in a pixelated style with Illustrator and gave them personalities to fit in the story.</h3>
   <div class="smshowcase"><img class="showcase"src="assets/img/blueprint.svg" /></div>
   <div class="smshowcase"><img class="character" src="assets/img/character1.gif" /><h4 class="characterds"><span>Re:</span><br/>
   Re is the protagonist who is trapped in sorrow and try to get rid of loneliness.</h4></div>
@@ -91,7 +101,7 @@ Priest had a relationship, but it did not work out. He advises Re to help people
 
 
 </div>
-
+</div>
 
 
 
@@ -101,6 +111,9 @@ Priest had a relationship, but it did not work out. He advises Re to help people
   <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
 </div>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script type ="text/javascript" src="js/javascript.js"></script>
 
 </body>
 </html>
