--- a/companionship/index.html
+++ b/companionship/index.html
@@ -37,7 +37,7 @@
   <h4 class="prosubtitle">An interactive story-telling game on <a class="whatis">Sifteo Cubes.</a></h4>
   <h6 class="procredit">Project Advisor: <a href="http://eleganthack.com" style="font-weight:500; text-decoration:underline">Christina Wodtke</a></h6>
 
-  <img class="showcase"src="assets/img/pho2.png" />
+  <img class="headpic"src="assets/img/pho2.png" />
 
 <h3 id="elevatorpitch">For people who have suffered from a break up, Companionship is an interactive story-telling game that persuades people to open their heart and listen to other people's stories. Unlike ordinary story books, the game encourages players to move on.</h3>
     <h4 class="quotation">“City life is millions of people being lonesome together.”
