update new work

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
  <td>   <a href="companionship/index.html"><img class="thumbnail" src="assets/img/companionship.png" /></a></td>
 
-    <td class="detail"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful that people forget about caring for others.</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+    <td class="detail"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful that people forget about caring for others.<br>Touch Point: Sifteo Cubes</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
 <tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful that people forget about caring for others.</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
@@ -44,24 +44,24 @@
 <div class="cutline"></div>
 
 <table class="item">
-  <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looking for branding elements and use them to develop a new product with new functions.
+  <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><span>Project Brief:</span><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looked for branding elements and use them to develop a new product with new functions.
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
   <tr>
-    <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looking for branding elements and use them to develop a new product with new functions.
+    <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><span>Project Brief:</span><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looked for branding elements and use them to develop a new product with new functions.
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
-    <td><a href="http://zxue.me/24-7mixx"><img class="thumbnail" src="assets/img/mixx2.png" /></td>
+    <td><a href="mixx/index.html"><img class="thumbnail" src="assets/img/mixx2.png" /></td>
 
-    <td class="detail"><h4>Fall, 2015</h4> <p><br />Touch Point:Mobile, Air Plane</p> <p>Instructor: Aynne Valencia</p> <p>Class:Visual Interaction</p> <!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <p>College: <img src="assets/icons/cca.svg" class="comp"></p> <a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td>
+    <td class="detail"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Fall, 2015</h4> <p class="detailp"><br />Touch Point:Mobile, Air Plane</p>  <p class="detailp">Instructor: Aynne Valencia</p> <p class="detailp">Class:Visual Interaction Design</p> <p class="detailp">College: <img src="assets/icons/cca.svg" class="comp"></p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="http://resume.zxue.me"><h4 class="deslink"><br />Resume<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Fall, 2015</h4><br> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table>
 
-<div class="cutline"></div>
+<!-- <div class="cutline"></div>
 
-<h1 class="continue">To Be Continued...</h1>
+<h1 class="continue">To Be Continued...</h1> -->
 
 
 </div>
