--- a/mixx/index.html
+++ b/mixx/index.html
@@ -83,7 +83,7 @@
       <td class="lg"> <img class="showcase"src="assets/img/playlist.png" /></td>
       <td class="lg">
     <h1 class="tagline2">On Air Entertainment</h1>
-    <p class="tagline2"><br /><span>More amusing than ever,</span> Virgin America is the airline people enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local culture in the music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
+    <p class="tagline2"><br />More entertaining than ever, Virgin America is the airline people most enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers a seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local cultural music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
   </td>
   </tr>
  
@@ -93,7 +93,7 @@
 
   <tr ><td class="sm">
  <h1 class="tagline2">On Air Entertainment</h1>
-    <p class="tagline2"><br /><span>More amusing than ever,</span> Virgin America is the airline people enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local culture in the music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
+    <p class="tagline2"><br />More entertaining than ever, Virgin America is the airline people most enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers a seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local cultural music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
   </td>
  </tr>
 
@@ -112,7 +112,7 @@
     <tr>
        <td class="lg">
     <h1 class="tagline2">Small Screen Life Style</h1>
-    <p class="tagline2"><br /><span>More amusing than ever,</span> Virgin America is the airline people enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local culture in the music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
+    <p class="tagline2"><br /><span>More entertaining than ever,</span> Virgin America is the airline people enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local culture in the music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
   </td>
       <td class="lg"> <img class="showcase"src="assets/img/phoneplay.png" /></td>
      
